# FCPM-Simulation

./: .gitignore  404.html  AUDIT_REMEDIATION_PLAN.md  BENCHMARK_RESULTS.md  CHANGELOG.md  CHANGELOG_V2.md  FEEDBACK_RESPONSE.md  PRESENTATION_SCRIPT.md  README.md  REFERENCES.md  REPOSITORY_STRUCTURE.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.serena/: project.yml
Cholesteric Liquid Crystals/: fcpm_simulated_intensity.npy  z_coordinates.npy
Clean Simulation/: fcpm_reconstruction_topovec.ipynb
Docs/: QUICK_START_GUIDE.md  optics.py
Enhanced Simulator Cholesteric LC/: .gitignore  README.md  advanced_reconstruction_demo_angles.npy  advanced_reconstruction_demo_confidence.npy  advanced_reconstruction_demo_results.json  advanced_reconstruction_tools.py  comprehensive_demo.py  demo_new_features.py  enhanced_fcpm_basic_intensity.npy  enhanced_fcpm_basic_metadata.json  enhanced_fcpm_basic_params.json  enhanced_fcpm_heavy_defects_intensity.npy  enhanced_fcpm_heavy_defects_metadata.json  enhanced_fcpm_heavy_defects_params.json  enhanced_fcpm_simulator.py  enhanced_fcpm_with_dislocations_intensity.npy  enhanced_fcpm_with_dislocations_metadata.json  enhanced_fcpm_with_dislocations_params.json  enhanced_visualization.py  optical_simulator.py  test_fixes.py  visualize_torons.py
benchmarks/: index.html
capabilities/: index.html
docs/: benchmarks.md  capabilities.md  failure_modes.md  identifiability.md  index.md  installation.md  preprocessing.md  quickstart.md  references.md  sign_optimization.md  visualization.md  workflows.md
examples/: 01_simulation_reconstruction.ipynb  02_fcpm_reconstruction.ipynb  03_soliton_validation.ipynb  (+4 more)
(+108 files in other folders)
